Classification using XGBoost

--- a/Parkinson's Disease Dataset/Detecting Parkinson's Disease with XGBoost.ipynb
+++ b/Parkinson's Disease Dataset/Detecting Parkinson's Disease with XGBoost.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "pk_data = pd.read_csv(\"../Data/parkinsons.data\")\n",
+    "pk_data = pd.read_csv(\"Data/parkinsons.data\")\n",
     "\n",
     "# No null values\n",
     "pk_data.info()"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -324,62 +324,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Under the assumption that all the columns besides the status column, let's split the dataset into\n",
+    "Under the assumption that all the columns besides the status column, let's split the dataset into\n",
     "dependant and independent variables. Independent varible are the feature variables and the dependant variable\n",
     "is the target variable and for this problem, the dependant variable is the 'status' column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Extract the features and labels\n",
     "features = pk_data.loc[:, pk_data.columns != 'status'].values[:,1:]\n",
-    "label = pk_data.loc[:, pk_data.columns == 'status']"
+    "label = pk_data.loc[:, 'status'].values"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> The feature vectors in this dataset are not within the same scale. The MinMaxScaler is the probably the most famous scaling algorithm, and follows the following formula for each feature:\n",
+    "The feature vectors in this dataset are not within the same scale. The MinMaxScaler is the probably the most famous scaling algorithm, and follows the following formula for each feature:\n",
     "$$\\dfrac{x_{i} - min(x)}{max(x) - min(x)}$$\n",
     "\n",
-    "> It essentially shrinks the range, so that the range is now between 0 and 1 (or -1 to 1 if negative values are present). This scaler works better for those cases where the standard scaler may not work so well. The min-max scaler works best if the distribution is not Gaussian, or the standard deviation is very high. For this data, the fit_transform() method fits to the feature vectors and then transforms it. We don’t need to scale the labels. \n",
+    "It essentially shrinks the range, so that the range is now between 0 and 1 (or -1 to 1 if negative values are present). This scaler works better for those cases where the standard scaler may not work so well. The min-max scaler works best if the distribution is not Gaussian, or the standard deviation is very high. For this data, the fit_transform() method fits to the feature vectors and then transforms it. We don’t need to scale the labels. \n",
     "\n",
     "Source: <a href = 'https://benalexkeen.com/feature-scaling-with-scikit-learn/'> Minmax Scaler </a>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-0.63138346, -0.77481654, -0.89037042, ...,  0.17153026,\n",
-       "        -0.21867743, -0.0053808 ],\n",
-       "       [-0.6033463 , -0.81013911, -0.4433544 , ...,  0.48267409,\n",
-       "        -0.05370956,  0.34265204],\n",
-       "       [-0.66992292, -0.88174367, -0.46942324, ...,  0.37274182,\n",
-       "        -0.18236124,  0.19336492],\n",
-       "       ...,\n",
-       "       [ 0.00546073, -0.43717403, -0.89854572, ..., -0.31484696,\n",
-       "         0.11793486, -0.63884033],\n",
-       "       [ 0.28578581,  0.20361309, -0.89144127, ..., -0.09423055,\n",
-       "        -0.36355605, -0.67372646],\n",
-       "       [ 0.46654868, -0.35441175, -0.85610326, ..., -0.16981039,\n",
-       "         0.00734563, -0.5690805 ]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Scale the features\n",
     "scaler = MinMaxScaler((-1,1))\n",
@@ -393,7 +370,62 @@
    "outputs": [],
    "source": [
     "# Split the data into training and testing data\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x_features, label, test_size = 0.15, random_state=1)"
+    "x_train, x_test, y_train, y_test = train_test_split(x_features, label, test_size = 0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Initialize and train the model with an XGBClassifier. This uses eXtreme Gradient Boosting to classify using\n",
+    "gradient boosting algorithms for modern data science problems. It comes under the Ensemble Learning group in ML, where we train and simulate to achieve one superior performance using several models. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
+       "              importance_type='gain', interaction_constraints='',\n",
+       "              learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
+       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+       "              n_estimators=100, n_jobs=0, num_parallel_tree=1,\n",
+       "              objective='binary:logistic', random_state=0, reg_alpha=0,\n",
+       "              reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+       "              tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = XGBClassifier()\n",
+    "model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 94.87179487179486\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred=model.predict(x_test)\n",
+    "print(\"Accuracy: {}\".format(accuracy_score(y_test, y_pred)*100))"
    ]
   },
   {
